Add author to the project

--- a/LightBnB_WebApp-master/package.json
+++ b/LightBnB_WebApp-master/package.json
@@ -9,7 +9,7 @@
     "start": "node server/server"
   },
   "keywords": [],
-  "author": "",
+  "author": "Tony Walker",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.6",
